provisioning/deployment-kernel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kernel-provisioning
  namespace: provisioning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kernel-provisioning
  template:
    metadata:
      labels:
        app: kernel-provisioning
    spec:
      containers:
      - name: kernel-provisioning
        image: xavor/kernel-provisioning:3.1
        ports:
        - name: http
          containerPort: 80
        - name: dynamic
          containerPort: 8080
        volumeMounts:
        - name: configs
          mountPath: /configs
        - name: iso-storage
          mountPath: /var/www/html/ubuntu
          readOnly: true
      volumes:
      - name: configs
        configMap:
          name: provisioning-configs
      - name: iso-storage
        persistentVolumeClaim:
          claimName: ubuntu-iso
